2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build.

	* Audio1/Audio1.cxx:
	* Glasses/AlBuffer.cxx:
	* Glasses/AlContext.cxx:
	* Glasses/AlContext.h:
	* Glasses/AlListener.cxx:
	* Glasses/AlSource.cxx:
	* Rnr/GL/AlListener_GL_Rnr.cxx:
	* Rnr/GL/AlSource_GL_Rnr.cxx:
	Always just include alut.h. On OSX AL includes are in OpenAL and
	we really don't care that much.
	Hide alut.h from CINT.

	* Makefile:
	On OSX use '-framework OpenAL' instead of '-lopenal'.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/AlSource_GL_Rnr.cxx:
	Bugfix - LT_FollowParents was taking wrong transformation.

2009-12-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AlSource.cxx:
	* Glasses/AlSource.h:
	* Rnr/GL/AlSource_GL_Rnr.cxx:
	* Rnr/GL/AlSource_GL_Rnr.h:
	Add LocationType_e enum - source can be placed into scene
	according to its parental position (LT_FollowParents, default) or
	relative to the camera (LT_CamDelta).

	* Rnr/GL/AlListener_GL_Rnr.cxx:
	* Rnr/GL/AlListener_GL_Rnr.h:
	White-space.

2009-11-29  Matevz Tadel  <matevz.tadel@ijs.si>

	Separate AL-buffer from AL-source.

	This should now in principle allow for buffer queuing but stupid
	AL reports illegal operation when trying to queue a second buffer
	if it is not the same as the one already queued.

	* Audio1:
	* Audio1/Audio1.cxx:
	* Audio1/Audio1.h:
	New files - Audio1 namespace.

	* Glasses/AlBuffer.cxx:
	* Glasses/AlBuffer.h:
	New glass - encapsulation of AL-buffer.

	* Glasses/AlSource.cxx:
	* Glasses/AlSource.h:
	Remove buffer handling - now in AlBuffer.
	New interface:
	- QueueBuffer(AlBuffer*) uses contents of link mDefaultBuffer is
	null is passed;
	- Play/Loop/Stop control playing.
	It is no longer necessary to play in a detached thread.

	* Makefile:
	Add Audio1/ to BASE_DIRS.

	* glass.list:
	Register AlBuffer.

2009-11-14  Matevz Tadel  <matevz.tadel@ijs.si>

	Avoid deprecated functions. Code beautification.

	* Glasses/AlContext.cxx:
	* Glasses/AlContext.h: